@@ -15,6 +15,15 @@ packageDescription <- function(pkg, lib.loc=NULL, fields=NULL, drop=TRUE)
 
     if(file != "") {
         desc <- as.list(read.dcf(file=file)[1,])
+        ## read the Encoding field if any
+        enc <- desc[["Encoding"]]
+        if(!is.null(enc)) {
+            ## Determine encoding and re-encode if necessary and possible.
+            if((Sys.getlocale("LC_CTYPE") != "C") && capabilities("iconv"))
+                desc <- lapply(desc, iconv, from=enc, to="")
+            else
+                warning("'DESCRIPTION' file has 'Encoding' field and re-encoding is not possible")
+        }
         if(!is.null(fields)){
             ok <- names(desc) %in% fields
             retval[names(desc)[ok]] <- desc[ok]
